<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/account"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_account_circle_24" />

    <Preference
        android:key="@string/sign_in"
        android:title="@string/sign_in"
        android:icon="@drawable/ic_baseline_login_24" />

    <Preference
        android:key="@string/language"
        android:title="@string/language"
        android:icon="@drawable/ic_baseline_language_setting_24" />

    <Preference
        android:key="@string/about"
        android:title="@string/about"
        android:icon="@drawable/ic_baseline_info_setting_24" />

    <Preference
        android:key="@string/sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_baseline_exit_to_app_24" />

</PreferenceScreen>