<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.c22_pc383.wacayang.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/favorite_fragment"
        android:name="com.c22_pc383.wacayang.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/setting_fragment"
        android:name="com.c22_pc383.wacayang.ProfileFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>