<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".DetailsActivity">

    <ScrollView
        android:id="@+id/main_view"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="16:10"
                android:background="@color/disabled_color_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favorite_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_medium"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@+id/image_slider"
                app:layout_constraintEnd_toEndOf="@+id/image_slider" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/image_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@drawable/tab_bullet_selector"
                android:background="@android:color/transparent"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                android:layout_alignParentBottom="true"
                app:layout_constraintBottom_toBottomOf="@+id/image_slider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/item_title"
                style="@style/TitleText.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/item_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_slider" />

            <TextView
                android:id="@+id/item_desc"
                style="@style/SubTitle.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/item_desc"
                android:maxLines="@integer/show_less_max_lines"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_title" />

            <Button
                android:id="@+id/show_more_btn"
                style="@style/Button.Chip"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/show_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_desc" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small"
                android:layout_marginTop="16dp"
                android:background="@color/disabled_color_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/show_more_btn" />


            <LinearLayout
                android:id="@+id/video_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1">

                <TextView
                    style="@style/TitleText.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_title" />

                <Button
                    android:id="@+id/youtube_btn"
                    style="@style/Button.Chip"
                    android:text="@string/youtube" />

            </LinearLayout>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video_player"
                app:layout_constraintDimensionRatio="16:9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_header" />

            <ProgressBar
                android:id="@+id/video_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/video_player"
                app:layout_constraintStart_toStartOf="@+id/video_player"
                app:layout_constraintTop_toTopOf="@+id/video_player"
                app:layout_constraintBottom_toBottomOf="@+id/video_player"/>

            <TextView
                android:id="@+id/video_source_info"
                style="@style/SubTitle.2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/courtesy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_player" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_small"
                android:layout_marginTop="16dp"
                android:background="@color/disabled_color_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_source_info" />

            <LinearLayout
                android:id="@+id/comment_header_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2">

                <TextView
                    android:id="@+id/comment_header"
                    style="@style/TitleText.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/comment_plural" />

                <Button
                    android:id="@+id/view_all_btn"
                    style="@style/Button.Chip"
                    android:text="@string/more" />

            </LinearLayout>

            <Button
                android:id="@+id/open_comment"
                style="@style/Button"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/post_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_header_holder" />

            <LinearLayout
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/recent_comment_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_large"
                android:paddingTop="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_large"
                android:paddingBottom="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_header_holder">

                <ImageView
                    android:id="@+id/commenter_photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/recent_comment"
                    style="@style/SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/item_desc" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_icon_dimen"
            android:layout_height="@dimen/image_icon_dimen"
            android:src="@drawable/ic_baseline_error_outline_24"
            app:tint="@color/secondary_color_1" />

        <TextView
            style="@style/SubTitle.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/network_error" />

        <Button
            style="@style/Button"
            android:id="@+id/refresh_btn"
            android:text="@string/refresh"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>