<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fastScrollEnabled="true"
    android:background="@color/disabled_color_2"
    android:scrollbars="none"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/banner_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/banner_image"
            app:layout_constraintStart_toStartOf="@+id/banner_image"
            app:layout_constraintTop_toTopOf="@+id/banner_image"
            app:layout_constraintVertical_bias="0.42000002" />

        <androidx.cardview.widget.CardView
            android:id="@+id/scan_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="-28dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/border_radius"
            app:layout_constraintBottom_toBottomOf="@+id/banner_image"
            app:layout_constraintEnd_toEndOf="@+id/banner_image"
            app:layout_constraintStart_toStartOf="@+id/banner_image">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp">

                <TextView
                    style="@style/TitleText.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_prompt_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:src="@drawable/ic_baseline_qr_code_scanner_24"
                    app:tint="@color/black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scan_card">

            <TextView
                style="@style/TitleText.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_header1" />

            <Button
                android:id="@+id/view_all_btn"
                style="@style/Button.Chip"
                android:text="@string/more" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:id="@+id/grid_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fastScrollEnabled="false"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header1"
            tools:listitem="@layout/wayang_item" />

        <LinearLayout
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/image_icon_dimen"
                android:layout_height="@dimen/image_icon_dimen"
                android:src="@drawable/ic_baseline_error_outline_24"
                app:tint="@color/secondary_color_1" />

            <TextView
                style="@style/SubTitle.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/no_item_found" />

            <Button
                style="@style/Button"
                android:id="@+id/refresh_btn"
                android:text="@string/refresh"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>